incluimos litle-server

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "description": "practipa con bootstrap",
   "version": "1.0.0",
   "main": "index.html",
-  "devDependencies": {},
+  "devDependencies": {
+    "lite-server": "^2.6.1"
+  },
   "scripts": {
+    "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
