--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
+    "open-iconic": "^1.1.1",
     "popper.js": "^1.16.1"
   },
   "name": "guia-hoteles",
